samples/_failures_safe/1761307781_9a37d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_743cb34f.c: In function ‘main’:
./samples/SAFE/__tmp_743cb34f.c:157:20: error: missing terminating " character
  157 |             printf("Decomp
      |                    ^~~~~~~
./samples/SAFE/__tmp_743cb34f.c:157:13: error: expected expression at end of input
  157 |             printf("Decomp
      |             ^~~~~~
./samples/SAFE/__tmp_743cb34f.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_743cb34f.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_743cb34f.c:157:13: error: expected declaration or statement at end of input
